# FL-Studio-SDK-CMake-Template

./: .gitignore  CMakeLists.txt  README.md
Examples/FruityGain_VC/: CMakeLists.txt  EditorDialog.cpp  EditorDialog.h  FruityGain_VC.cpp  FruityGain_VC.def  FruityGain_VC.h  Gain.cpp  Gain.h  StdAfx.cpp  StdAfx.h  resource.h
Examples/InternalController_VC/: CMakeLists.txt  FruityPlug.cpp  FruityPlug.def  FruityPlug.h  Resource.h  StdAfx.cpp  StdAfx.h  SynthForm.cpp  SynthForm.h  TestPlug.cpp  TestPlug.h
Examples/Osc3_VC/: CMakeLists.txt  EditorDialog.cpp  EditorDialog.h  Osc3_VC.cpp  Osc3_VC.def  Osc3_VC.h  StdAfx.cpp  StdAfx.h  resource.h  testplug.cpp  testplug.h
Examples/Saw_VC/: CMakeLists.txt  FruityPlug.cpp  FruityPlug.def  testplug.cpp  testplug.h
Plugin/: CMakeLists.txt  plugin.cpp  plugin.h
Plugin/utils/: check_dir.cmake  definitions.h.in  install_rules.cmake  plugin.def.in
SDK/: CMakeLists.txt~  fp_cplug.cpp  fp_cplug.h  fp_def.h  fp_extra.cpp  fp_extra.h  fp_pathmanager.cpp  fp_pathmanager.h  fp_plugclass.cpp  fp_plugclass.h  generictransport.h
SDK/SDK__documentation/: index.html
SDK/SDK__documentation/doc/: bitfields.html  changes.html  constants.html  contact.html  cppfruityplug.html  delphifruityplug.html  fruityplug.html  fruityplughost.html  fruitypluginfo.html  functions.html  general.html  guidelines.html  installation.html  levelparams.html  menu.html  titlescreen.html  topframe.html  types.html  variables.html
SDK/SDK__documentation/doc/examples/: examples_main.html  fruitygain_c.html  fruitygain_d.html  osc3_c.html  osc3_d.html  sine_c.html  sine_d.html
SDK/SDK__documentation/doc/gettingstarted/: creating.html  host.html  messages.html  parameters.html  plugintypes.html  principles.html  processing.html  voices.html
SDK/SDK_documentation/: index.html
SDK/SDK_documentation/doc/: bitfields.html  changes.html  constants.html  contact.html  cppfruityplug.html  delphifruityplug.html  fruityplug.html  fruityplughost.html  fruitypluginfo.html  functions.html  general.html  guidelines.html  installation.html  levelparams.html  menu.html  titlescreen.html  topframe.html  types.html  variables.html
SDK/SDK_documentation/doc/examples/: examples_main.html  fruitygain_c.html  fruitygain_d.html  osc3_c.html  osc3_d.html  sine_c.html  sine_d.html
SDK/SDK_documentation/doc/gettingstarted/: creating.html  host.html  messages.html  parameters.html  plugintypes.html  principles.html  processing.html  voices.html
